# arize-tracing-assistant

./: CHANGELOG.md  README.md  gemini-extension.json  pyproject.toml
src/arize_mcp/: arize_mcp.py
src/arize_mcp/refs/auto_inst_examples/arize/strands-agents/: python.md
src/arize_mcp/refs/auto_inst_examples/phoenix/strands-agents/: python.md
src/arize_mcp/refs/manual_inst_examples/: app_manually_instrumented_arize.py  app_manually_instrumented_phoenix.py  send_traces_arize.py  send_traces_phoenix.py
